[package]
name = "paas-dashboard"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
chrono = "0.4"
fern = "0.6.2"
lazy_static = "1.4.0"
log = "0.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }

[[bin]]
name = "paas-dashboard"
path = "src/bin/paas_dashboard.rs"
